--- a/WorkPoint365.WebApi.Sample/App.config
+++ b/WorkPoint365.WebApi.Sample/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ClientID" value="{Your client id}" />
-    <add key="ClientSecret" value="{Your client secret}" />
-    <add key="WorkPointUrl" value="https://yourtenant.sharepoint.com/sites/workpointsite" />
-    <add key="TenantID" value="yourtenant.onmicrosoft.com" />
+    <add key="ClientID" value="{ClientId}" />
+    <add key="ClientSecret" value="{ClientSecret}" />
+    <add key="WorkPointUrl" value="{WorkPointUrl}" />
+    <add key="Tenant" value="{Tenant}" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
