Remove dependency for ADAL and use MSAL instead

--- a/WorkPoint365.WebApi.Sample/App.config
+++ b/WorkPoint365.WebApi.Sample/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ClientID" value="{ClientId}" />
-    <add key="ClientSecret" value="{ClientSecret}" />
-    <add key="WorkPointUrl" value="{WorkPointUrl}" />
-    <add key="TenantID" value="{TenantID}" />
+	  <add key="ClientID" value="{ClientId}" />
+	  <add key="ClientSecret" value="{ClientSecret}" />
+	  <add key="WorkPointUrl" value="{WorkPointUrl}" />
+	  <add key="TenantID" value="{TenantID}" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -14,6 +14,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Identity.Client" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.37.0.0" newVersion="4.37.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
