--- a/WorkPoint365.WebApi.Sample.dotnetcore/WorkPoint365.WebApi.Sample.dotnetcore.csproj
+++ b/WorkPoint365.WebApi.Sample.dotnetcore/WorkPoint365.WebApi.Sample.dotnetcore.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
