--- a/WorkPoint365.WebApi.Sample.dotnetcore/WorkPoint365.WebApi.Sample.dotnetcore.csproj
+++ b/WorkPoint365.WebApi.Sample.dotnetcore/WorkPoint365.WebApi.Sample.dotnetcore.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.66.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
   <ItemGroup>
